fix(material/datepicker): content overflowing when large custom header is provided
Fixes a bug in the Angular Material `datepicker` component where the content of the datepicker is overflowing outside when a custom header with large height is provided. This commit updates the html to use plain class instead of ngClass and removes the $non-touch-custom-header-calendar-height scss variable.

Fixes #20459

--- a/src/material/datepicker/datepicker-content.scss
+++ b/src/material/datepicker/datepicker-content.scss
@@ -6,10 +6,6 @@ $non-touch-calendar-width:
 // (largest the calendar will get).
 $non-touch-calendar-height: 354px;
 
-// Height should be auto, when the custom header is provided.
-// This will prevent the content from overflowing.
-$non-touch-custom-header-calendar-height: auto;
-
 // Ideally the calendar would have a constant aspect ratio, no matter its size, and we would base
 // these measurements off the aspect ratio. Unfortunately, the aspect ratio does change a little as
 // the calendar grows, since some of the elements have pixel-based sizes. These numbers have been
@@ -36,8 +32,10 @@ $touch-max-height: 788px;
   }
 
   // Override mat-calendar's height when custom header is provided
-  .mat-datepicker-custom-header .mat-calendar {
-    height: $non-touch-custom-header-calendar-height;
+  // Height should be auto, when the custom header is provided.
+  // This will prevent the content from overflowing.
+  .mat-datepicker-content-container-with-custom-header .mat-calendar {
+    height: auto;
   }
 
   // Note that this selector doesn't technically have to be nested, but we want the slightly
